@@ -6,6 +6,10 @@ Atari 8-bit music stored in several formats. To install the plugin, simply
 extract foo_asap.dll to the "components" directory of your foobar2000
 installation (normally "C:\Program Files\foobar2000").
 
+The plugin now has some configuration. You can specify a time limit for songs
+that do not define playback time. You can also choose if songs marked
+as looping should finish when the loop starts or not.
+
 The plugin does support subsongs, which appear as separate items
 on the playlist. foobar2000's default title formating doesn't include subsong
 numbers however, so the subsongs look the same on the playlist.
@@ -13,10 +17,4 @@ To fix this problem, open File / Preferences / Display / Title formatting
 and before "$tab()" in the edit box insert something like this:
 $ifgreater(%_subsong%,0, - subsong $add(1,%_subsong%),)
 - this will add 1-based numbers to all subsongs except for subsong 1
-(90% of SAPs in ASMA contain just one song). More advanced title formatting
-(including total number of subsongs, AUTHOR/NAME tags, etc) will be possible
-in future versions of ASAP.
-
-This plugin is part of the ASAP project. Information about ASAP follows.
-
-
+(90% of SAPs in ASMA contain just one song).
